# lofifi

./: .gitignore  Cargo.toml  build.rs
src/: dbg.rs  main.rs  messages.rs  play.rs  player.rs  scrapers.rs  tasks.rs  tracks.rs
src/bandcamp/: check.rs  discography.rs
src/player/: audio.rs  bookmark.rs  downloader.rs  error.rs  mpris.rs  persistent_volume.rs  queue.rs  ui.rs
src/player/ui/: art.rs  clock.rs  components.rs  cover.rs  input.rs  state.rs
src/scrapers/: archive.rs  chillhop.rs  lofigirl.rs
src/tracks/: cache.rs  error.rs  list.rs  presave.rs  utils.rs
